@@ -7,8 +7,9 @@ package view;
 import java.util.List;
 import javax.swing.JOptionPane;
 import javax.swing.table.DefaultTableModel;
-import controller.ControllerArquivoTextoCampeao;
+import controller.ControllerArquivoCampeao;
 import java.util.ArrayList;
+import java.util.stream.Collectors;
 import model.Campeao;
 
 /**
@@ -17,8 +18,8 @@ import model.Campeao;
  */
 public class TelaBuscarCampeao extends javax.swing.JFrame {
     
-    ControllerArquivoTextoCampeao controle = new ControllerArquivoTextoCampeao();
-    Campeao campeao = new Campeao();
+    ControllerArquivoCampeao controle = new ControllerArquivoCampeao();
+    //Campeao campeao = new Campeao();
 
     /**
      * Creates new form TelaBuscarJogador
@@ -32,7 +33,7 @@ public class TelaBuscarCampeao extends javax.swing.JFrame {
             DefaultTableModel model = (DefaultTableModel)tabelaCampeoes.getModel();
             model.setNumRows(0);
 
-            for(Campeao c: controle.getCampeoes()){
+            for(Campeao c: controle.listaCampeoes()){
                 model.addRow(new Object[]{
                         c.getNome(),
                         c.getFuncao(),
@@ -82,9 +83,9 @@ public class TelaBuscarCampeao extends javax.swing.JFrame {
         buscaJogador.setIconTextGap(5);
 
         buttonSair.setBackground(new java.awt.Color(0, 51, 51));
-        buttonSair.setFont(new java.awt.Font("Segoe UI", 1, 15)); // NOI18N
+        buttonSair.setFont(new java.awt.Font("Segoe UI", 1, 12)); // NOI18N
         buttonSair.setForeground(new java.awt.Color(255, 255, 255));
-        buttonSair.setText("Sair");
+        buttonSair.setText("Voltar");
         buttonSair.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 buttonSairActionPerformed(evt);
@@ -229,7 +230,7 @@ public class TelaBuscarCampeao extends javax.swing.JFrame {
                 .addContainerGap()
                 .addComponent(buscaJogador)
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                .addComponent(buttonSair, javax.swing.GroupLayout.PREFERRED_SIZE, 60, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addComponent(buttonSair)
                 .addGap(29, 29, 29))
             .addComponent(jPanel1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
         );
@@ -248,6 +249,8 @@ public class TelaBuscarCampeao extends javax.swing.JFrame {
     }// </editor-fold>//GEN-END:initComponents
 
     private void buttonSairActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_buttonSairActionPerformed
+        TelaHome home = new TelaHome();
+        home.setVisible(true);
         this.dispose();
     }//GEN-LAST:event_buttonSairActionPerformed
 
@@ -260,11 +263,11 @@ public class TelaBuscarCampeao extends javax.swing.JFrame {
         List<Campeao> listaFiltrada = new ArrayList<>();
         
         if (pesquisa.isEmpty()) {
-            listaFiltrada = controle.getCampeoes(); //se o campo estiver vazio, mostra todos os dados
+            listaFiltrada = controle.listaCampeoes(); //se o campo estiver vazio, mostra todos os dados
         } else {
-            listaFiltrada = controle.getCampeoes().stream()
+            listaFiltrada = controle.listaCampeoes().stream()
                     .filter(c -> c.getNome().toLowerCase().contains(pesquisa))
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         for (Campeao c : listaFiltrada) {
@@ -328,7 +331,7 @@ public class TelaBuscarCampeao extends javax.swing.JFrame {
     }//GEN-LAST:event_jButtonLerMouseClicked
 
     private void jButtonLerActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButtonLerActionPerformed
-        controle.lerCampeao();
+        controle.lerCampeoes();
         listaCampeoes();
     }//GEN-LAST:event_jButtonLerActionPerformed
 
@@ -388,7 +391,7 @@ public class TelaBuscarCampeao extends javax.swing.JFrame {
         DefaultTableModel model = (DefaultTableModel) tabelaCampeoes.getModel();
         model.setNumRows(0);
 
-        for (Campeao c : controle.getCampeoes()) {
+        for (Campeao c : controle.listaCampeoes()) {
             model.addRow(new Object[]{
                 c.getNome(),
                 c.getFuncao(),
